test/hotCases/errors/events/l_exports.js
export { valueA } from './l_valueA';
export { valueB } from './l_valueB';
export { valueC } from './l_valueC';
export { valueD } from './l_valueD';
